final version to find top arrival airports

--- a/TopArrivalAirport.ipynb
+++ b/TopArrivalAirport.ipynb
@@ -2,19 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration is finished\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "inputFile = pd.read_csv('./bookings.csv', sep='\\s*\\^',engine='python', iterator=True)\n",
+    "inputFile = pd.read_csv('./data/bookings.csv', sep='\\s*\\^',engine='python', iterator=True)\n",
     "\n",
     "loop = True\n",
-    "chunkSize = 1000\n",
+    "chunkSize = 10000\n",
     "chunks = []\n",
     "tops = []\n",
     "while loop:\n",
@@ -29,7 +37,17 @@
     "\n",
     "df = pd.concat(tops)\n",
     "\n",
+    "ss = df.groupby(df.index).sum()\n",
     "\n",
+    "ssFrame = pd.DataFrame({'arrival_airport':ss.index, 'passenger_number':ss.values})\n",
+    "\n",
+    "finalTopArrival = ssFrame.sort_values('passenger_number', ascending=False).head(10)[['arrival_airport', 'passenger_number']]\n",
+    "\n",
+    "op = open('./output/TopArrivalAirports.txt', 'w')\n",
+    "\n",
+    "op.write(str(finalTopArrival))\n",
+    "\n",
+    "op.close()\n",
     "\n",
     "\n",
     "\n",
