--- a/CountLines.ipynb
+++ b/CountLines.ipynb
@@ -2,12 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number of lines for searches.csv is: 20390199\n",
+      "\n",
+      "The number of lines for bookings.csv is: 10000012\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "def readline(filepath):\n",
     "    count = 0\n",
@@ -16,11 +27,16 @@
     "        if not buffer:\n",
     "            break\n",
     "        count += buffer.count('\\n')\n",
+    "    count += 1\n",
     "    return count\n",
+    "\n",
     "\n",
     "inputFile1 = open('./data/searches.csv', 'r')\n",
     "inputFile2 = open('./data/bookings.csv', 'r')\n",
     "\n",
+    "\n",
+    "print('The number of lines for searches.csv is: '+str(readline(inputFile1))+\"\\n\")\n",
+    "print('The number of lines for bookings.csv is: '+str(readline(inputFile2))+\"\\n\")\n",
     "outputFile = open('./output/NumberOfLines.txt', 'w')\n",
     "outputFile.write('The number of lines for searches.csv is: '+str(readline(inputFile1))+\"\\n\")\n",
     "outputFile.write('The number of lines for bookings.csv is: '+str(readline(inputFile2))+\"\\n\")\n",
