add output for TopArrivalAirport

--- a/TopArrivalAirport.ipynb
+++ b/TopArrivalAirport.ipynb
@@ -12,7 +12,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration is finished\n"
+      "The top 10 arrival airports are: \n",
+      "   arrival_airport  passenger_number\n",
+      "66             LHR           86419.0\n",
+      "72             MCO           61900.0\n",
+      "62             LAX           58810.0\n",
+      "61             LAS           57844.0\n",
+      "55             JFK           50410.0\n",
+      "19             CDG           40870.0\n",
+      "77             MIA           40865.0\n",
+      "8              BKK           38460.0\n",
+      "97             SFO           36945.0\n",
+      "35             DXB           32940.0\n"
      ]
     }
    ],
@@ -33,7 +44,7 @@
     "        tops.append(topArrival)\n",
     "    except StopIteration:\n",
     "        loop = False\n",
-    "        print (\"Iteration is finished\")\n",
+    "        #print (\"Iteration is finished\")\n",
     "\n",
     "df = pd.concat(tops)\n",
     "\n",
@@ -49,6 +60,8 @@
     "\n",
     "op.close()\n",
     "\n",
+    "print(\"The top 10 arrival airports are: \")\n",
+    "print(str(finalTopArrival))\n",
     "\n",
     "\n",
     "\n",
