add results for PlotHistogram

--- a/PlotHistogram.ipynb
+++ b/PlotHistogram.ipynb
@@ -8,6 +8,7 @@
    },
    "outputs": [],
    "source": [
+    "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "plt.xlabel('Month')\n",
@@ -22,6 +23,7 @@
     "plot2 = plt.bar(month2,[24258,22800,24681,25251,26334,22800,22971,21831,21147,22294,20272,14504], color = 'b',width = .25,  label='MAD')\n",
     "plot3 = plt.bar(month3,[29469,28329,30552,31236,28728,26505,29241,27075,23427,20276,19824,15400], color = 'g', width = .25, label='BCN')\n",
     "plt.legend()\n",
+    "plt.show()\n",
     "\n",
     "plt.savefig('./output/MonthlySearchHistogram.png')"
    ]
