--- a/CountLines.ipynb
+++ b/CountLines.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -12,9 +12,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The number of lines for searches.csv is: 20390199\n",
-      "\n",
-      "The number of lines for bookings.csv is: 10000012\n",
+      "The number of lines is: 1000\n",
       "\n"
      ]
     }
@@ -31,18 +29,19 @@
     "    return count\n",
     "\n",
     "\n",
-    "inputFile1 = open('./data/searches.csv', 'r')\n",
-    "inputFile2 = open('./data/bookings.csv', 'r')\n",
+    "inputFile1 = open('/Users/Sophie/Documents/workspace/kNN/data/databig2.txt', 'r')\n",
+    "#inputFile2 = open('./data/bookings.csv', 'r')\n",
     "\n",
     "\n",
-    "print('The number of lines for searches.csv is: '+str(readline(inputFile1))+\"\\n\")\n",
-    "print('The number of lines for bookings.csv is: '+str(readline(inputFile2))+\"\\n\")\n",
-    "outputFile = open('./output/NumberOfLines.txt', 'w')\n",
-    "outputFile.write('The number of lines for searches.csv is: '+str(readline(inputFile1))+\"\\n\")\n",
-    "outputFile.write('The number of lines for bookings.csv is: '+str(readline(inputFile2))+\"\\n\")\n",
-    "outputFile.close( )\n",
+    "print('The number of lines is: '+str(readline(inputFile1))+\"\\n\")\n",
+    "#print('The number of lines for searches.csv is: '+str(readline(inputFile1))+\"\\n\")\n",
+    "#print('The number of lines for bookings.csv is: '+str(readline(inputFile2))+\"\\n\")\n",
+    "#outputFile = open('./output/NumberOfLines.txt', 'w')\n",
+    "#outputFile.write('The number of lines for searches.csv is: '+str(readline(inputFile1))+\"\\n\")\n",
+    "#outputFile.write('The number of lines for bookings.csv is: '+str(readline(inputFile2))+\"\\n\")\n",
+    "#outputFile.close( )\n",
     "inputFile1.close( )\n",
-    "inputFile2.close( )"
+    "#inputFile2.close( )"
    ]
   }
  ],
