--- a/topFreqWord.ipynb
+++ b/topFreqWord.ipynb
@@ -41,9 +41,21 @@
     "\n",
     "print (topFreqWords('test.txt', 10))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "reduce(lambda x, y: x*y, map(lambda x: x*2, items))"
+   ]
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python [Root]",
    "language": "python",
